<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.movie_details_screen.ui.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:contentDescription="@string/backdrop"
                android:scaleType="centerCrop"
                android:src="?attr/backgroundCard" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPosterInfo"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_below="@id/ivPoster"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-50dp"
                android:backgroundTint="?attr/backgroundGenres"
                android:orientation="vertical"
                app:cardCornerRadius="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvFilmTitle"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/film_name_example"
                        android:textAppearance="@style/Heading" />

                    <CheckBox
                        android:id="@+id/cbSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="5dp"
                        android:button="@drawable/save_selector"
                        android:buttonTint="@color/black_70" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btn_play"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="?attr/backgroundButton"
                        android:gravity="center"
                        android:text="@string/watch_trailer"
                        android:textColor="?attr/colorAccented"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvDescTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cvPosterInfo"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="70dp"
                android:text="@string/description_title"
                android:textAppearance="@style/GenresHeading" />

            <TextView
                android:id="@+id/tvDescInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDescTitle"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/desc_example"
                android:textAppearance="@style/Subtitle2" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>